Ajout des sections recettes et cours avec images locales

--- a/index.html
+++ b/index.html
@@ -45,52 +45,49 @@
   </section>
 
   <main>
-
-    <section class="cards-section">
-      <h3>Recettes populaires</h3>
-      <div class="cards-container">
-        <div class="card">
-          <img src="https://images.unsplash.com/photo-1613145991554-b36b53be2e7e?auto=format&fit=crop&w=400&q=80" alt="Sauces africaines" />
-          <p>Sauces africaines</p>
-        </div>
-        <div class="card">
-          <img src="https://images.unsplash.com/photo-1551183053-bf91a1d81141?auto=format&fit=crop&w=400&q=80" alt="Les salades" />
-          <p>Les salades</p>
-        </div>
-        <div class="card">
-          <img src="https://images.unsplash.com/photo-1601056553234-8c5f77aa9734?auto=format&fit=crop&w=400&q=80" alt="Plats résistants" />
-          <p>Saveurs des plats résistants</p>
-        </div>
-        <div class="card">
-          <img src="https://images.unsplash.com/photo-1505253210343-d4fd6f1b1c00?auto=format&fit=crop&w=400&q=80" alt="Desserts gourmands" />
-          <p>Desserts gourmands</p>
-        </div>
-      </div>
-    </section>
-
-    <section class="cards-section">
-      <h3>Nos cours</h3>
-      <div class="cards-container">
-        <div class="card">
-          <img src="https://images.unsplash.com/photo-1543352634-1e850b18e168?auto=format&fit=crop&w=400&q=80" alt="Cours de pâtisserie" />
-          <p>Cours de pâtisserie</p>
-        </div>
-        <div class="card">
-          <img src="https://images.unsplash.com/photo-1505253210399-5d91122a3ca3?auto=format&fit=crop&w=400&q=80" alt="Cours de cuisine africaine" />
-          <p>Cours de cuisine africaine</p>
-        </div>
-        <div class="card">
-          <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=400&q=80" alt="Cours de cuisine internationale" />
-          <p>Cuisine internationale</p>
-        </div>
-        <div class="card">
-          <img src="https://images.unsplash.com/photo-1543349684-41b38f93e55a?auto=format&fit=crop&w=400&q=80" alt="Techniques culinaires" />
-          <p>Techniques culinaires</p>
-        </div>
-      </div>
-    </section>
-
-    <section class="apropos">
+<section class="cards-section">
+  <h3>Recettes populaires</h3>
+  <div class="cards-container">
+    <div class="card">
+      <img src="images/sauces-africaines.jpg" alt="Sauces africaines">
+      <p>Sauces africaines</p>
+    </div>
+    <div class="card">
+      <img src="images/salades.jpg" alt="Salades">
+      <p>Les salades</p>
+    </div>
+    <div class="card">
+      <img src="images/plats-resistants.jpg" alt="Plats résistants">
+      <p>Saveurs des plats résistants</p>
+    </div>
+    <div class="card">
+      <img src="images/desserts-gourmands.jpg" alt="Desserts">
+      <p>Desserts gourmands</p>
+    </div>
+  </div>
+</section>
+<section class="cards-section">
+  <h3>Nos cours</h3>
+  <div class="cards-container">
+    <div class="card">
+      <img src="images/cours-patisserie.jpg" alt="Cours de pâtisserie">
+      <p>Cours de pâtisserie</p>
+    </div>
+    <div class="card">
+      <img src="images/cours-cuisine-africaine.jpg" alt="Cours de cuisine africaine">
+      <p>Cours de cuisine africaine</p>
+    </div>
+    <div class="card">
+      <img src="images/cuisine-internationale.jpg" alt="Cuisine internationale">
+      <p>Cuisine internationale</p>
+    </div>
+    <div class="card">
+      <img src="images/techniques-culinaires.jpg" alt="Techniques culinaires">
+      <p>Techniques culinaires</p>
+    </div>
+  </div>
+</section>
+     <section class="apropos">
       <h3>À propos de Mannes & Délices</h3>
       <p>
         Mannes & Délices est une plateforme dédiée à l'apprentissage de la cuisine professionnelle,
