Test header menu manuel

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+<link rel="stylesheet" href="style.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mannes & Délices - Le goût d’apprendre, l’art de cuisiner</title>
@@ -18,8 +19,9 @@
   </script>
 </head>
 <body>
-
+<header class="site-header"> … </header>
   <header>
+<link rel="stylesheet" href="style.css">
     <h1>Mannes & Délices</h1>
     <nav>
       <ul>
@@ -110,6 +112,8 @@
   <footer>
     <p>&copy; 2025 Mannes & Délices – Tous droits réservés</p>
   </footer>
-
+<script>
+  // toggleMenu…
+</script>
 </body>
 </html>
